--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,6 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="Sliding",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Hold",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=Gamepad_LeftY)
